package dev.zitech.compose.settings

object Tags {
    const val TAG_TOGGLE_ITEM = "toggle_item"
    const val TAG_CHECK_ITEM = "check_item"
    const val TAG_MARKETING_OPTION = "marketing_option_"
    const val TAG_SELECT_THEME = "select_theme"
    const val TAG_THEME_OPTION = "theme_"
}